hphp/hack/test/typecheck/inout/bad_inout_hint_call2.php.exp
File "bad_inout_hint_call2.php", line 8, characters 7-8:
Invalid argument (Typing[4184])
File "bad_inout_hint_call2.php", line 6, characters 15-16:
This is an inout parameter
File "bad_inout_hint_call2.php", line 3, characters 24-26:
It is incompatible with a normal parameter
