hphp/hack/test/typecheck/inout/bad_inout_hint_call2.php
<?hh // strict

function foo((function(int): void) $f): void {}

function test(): void {
  $x = (inout $v) ==> {
  };
  foo($x);
}
